<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_control_py</name>
  <version>0.0.1</version>
  <description>Python binding for ros2_control</description>

  <maintainer email="olivier.stasse@laas.fr">Olivier Stasse</maintainer>

  <license>Apache License 2.0</license>

  <author email="olivier.stasse@laas.fr">Olivier Stasse</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pybind11_vendor</build_depend>

  <exec_depend>ament_index_python</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclpy</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits</depend>
  <depend>joint_limits_interface</depend>
  <depend>transmission_interface</depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
