<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_control_py_builder</name>
  <version>0.0.2</version>
  <description>Python binding for ros2_control</description>

  <maintainer email="olivier.stasse@laas.fr">Olivier Stasse</maintainer>

  <license>Apache License 2.0</license>

  <author email="olivier.stasse@laas.fr">Olivier Stasse</author>
  <author email="maxence.michot@laas.fr">Maxence MICHOT</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>pybind11_vendor</build_depend>
  <build_depend>flex</build_depend>

  <exec_depend>ament_index_python</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits</depend>
  <depend>transmission_interface</depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
